benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_DivMod_Sub_iter4_error.log
=== Verification Error - Iteration 4 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_DivMod_Sub.rs
Time: 2025-09-15 20:22:52

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:90:9
   |
80 | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
   |                                                                      --- expected `verus_builtin::int` because of return type
...
90 |         1
   |         ^ expected `int`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:92:9
   |
80 | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
   |                                                                      --- expected `verus_builtin::int` because of return type
...
92 |         -1
   |         ^^ expected `int`, found integer

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:101:28
    |
80  | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
    |                                                                      --- expected `verus_builtin::int` because of return type
...
101 |                     return 1;
    |                            ^ expected `int`, found integer

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:108:9
    |
80  | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
    |                                                                      --- expected `verus_builtin::int` because of return type
...
108 |         0
    |         ^ expected `int`, found integer

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:131:19
    |
131 |         if cmp >= 0 {
    |            ---    ^ expected `int`, found integer
    |            |
    |            expected because this is `verus_builtin::int`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:90:9
   |
80 | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
   |                                                                      --- expected `verus_builtin::int` because of return type
...
90 |         1
   |         ^ expected `int`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:92:9
   |
80 | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
   |                                                                      --- expected `verus_builtin::int` because of return type
...
92 |         -1
   |         ^^ expected `int`, found integer

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:101:28
    |
80  | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
    |                                                                      --- expected `verus_builtin::int` because of return type
...
101 |                     return 1;
    |                            ^ expected `int`, found integer

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:108:9
    |
80  | exec fn compare_bit_strings(s1: &Vec<char>, s2: &Vec<char>) -> (res: int)
    |                                                                      --- expected `verus_builtin::int` because of return type
...
108 |         0
    |         ^ expected `int`, found integer

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Sub_impl.rs:131:19
    |
131 |         if cmp >= 0 {
    |            ---    ^ expected `int`, found integer
    |            |
    |            expected because this is `verus_builtin::int`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
